[END] Página projeto, atualização do DB para aparecer no GH

--- a/src/components/card/style.sass
+++ b/src/components/card/style.sass
@@ -142,16 +142,16 @@
                 font-size: $size * 2.2
 
 .languages:hover
-    background-color: $languages
+    background-color: $orange
 
 .hard:hover
-    background-color: $hardskill
+    background-color: $red
     
 .soft:hover
-    background-color: $softskill
+    background-color: $blue
 
 .management:hover
-    background-color: $management
+    background-color: $yellow
 
 //Career-Card
 .career-card
@@ -166,6 +166,7 @@
     max-width: $size * 60
     padding: $size
     margin: $size 0
+    box-shadow: 0 0 20px 1px $shadow
     
     .title
         margin-bottom: $size
@@ -183,9 +184,11 @@
         margin-bottom: $size
         width: 100%
     
+    .team
+        opacity: 0.5
+    
     .techs
         width: 100%
-        max-width: 100%
         display: flex
         justify-content: center
         align-items: center
@@ -226,16 +229,16 @@
                 text-align: center
 
     .languages
-        background-color: $languages
+        background-color: $orange
     
     .hard
-        background-color: $hardskill
+        background-color: $red
     
     .soft
-        background-color: $softskill
+        background-color: $blue
 
     .management
-        background-color: $management
+        background-color: $yellow
         
     .career-card
         width: 90vw
