--- a/src/style/variables.sass
+++ b/src/style/variables.sass
@@ -16,7 +16,7 @@ $size: 10px
 $success: #009933
 $error: #FF4D4D
 $selected-lng: #CC9900
-$languages: #F16529
-$management: #E6B800
-$hardskill: #FF4D4D
-$softskill: #668CFF
+$orange: #F16529
+$yellow: #E6B800
+$red: #FF4D4D
+$blue: #668CFF
