--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,6 @@
 @use 'src/style/variables' as *
 @import '/src/style/utils'
+@import 'react-responsive-carousel/lib/styles/carousel.min.css'
 
 .App
     display: flex
